tests/e2e/function_invalid_return.story
function name key:int
    return a / b + c or d
